<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/startdate"
            android:id="@+id/tvSendingCostsStartDate"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etSendingCostsStartDate"
            android:layout_weight="0"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/finishdate"
            android:id="@+id/tvSendingCostsFinishDate"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etSendingCostsFinishDate"
            android:layout_weight="0"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendingcosts"
            android:id="@+id/btnSendingCostsSend"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>